--- a/app/views/categories/add.phtml
+++ b/app/views/categories/add.phtml
@@ -7,17 +7,15 @@
 		<?php echo $addForm->render('name') ?>
 		<span class="help-block">
 <?php
-	if ($addForm->hasMessagesFor('name')) {
-		echo $addForm->getMessagesFor('name')[0];
-	} else {
-		if ($this->view->getVar('category_create_error')) echo $this->view->getVar('category_create_error');
+	if (isset($this->view->getVar('errors')[$addForm->get('name')->getName()])) {
+		echo $this->view->getVar('escaper')->escapeHtml($this->view->getVar('errors')[$addForm->get('name')->getName()]);
 	}
 ?>
 		</span>
 	</div>
 
 	<div class="form-group">
-		<label for="<?=$addForm->get('description')->getName()?>"><?=$addForm->get('description')->getLabel()?><?php if ($addForm->hasMessagesFor('description')) { ?> (<strong style="color:red;"><?php echo $form->getMessagesFor('description')[0]?></strong>)<?php } ?>:</label>
+		<label for="<?=$addForm->get('description')->getName()?>"><?=$addForm->get('description')->getLabel()?><?php if ($addForm->hasMessagesFor('description')) { ?> (<strong style="color:red;"><?php echo $addForm->getMessagesFor('description')[0]?></strong>)<?php } ?>:</label>
 		<?php echo $addForm->render('description') ?>
 	</div>
 
