I5: Implement 'Posts' Fixed comments for commit 7c1b84c2272d38dd31552a6ac1ff1fefea07c961

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -2,7 +2,7 @@
 <div>
 
 <h1 class="page-header">
-	<a href='/posts/index/<?=$post->id?>'>
+	<a href='/index/show/<?=$post->id?>'>
 		<?=$post->title?>
 	</a>
 </h1>
