--- a/app/views/partials/navbar.phtml
+++ b/app/views/partials/navbar.phtml
@@ -11,7 +11,10 @@
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="/home">Home</a></li>
+				<li class=""><a href="/home">Home</a></li>
+<? if ($this->session->get('auth')->isAuthenticated()) {?>
+				<li class=""><a href="/posts">Posts</a></li>
+<? } ?>
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right">
