--- a/app/views/partials/navbar.phtml
+++ b/app/views/partials/navbar.phtml
@@ -14,6 +14,7 @@
 				<li class=""><a href="/home">Home</a></li>
 <? if ($this->session->get('auth')->isAuthenticated()) {?>
 				<li class=""><a href="/posts">Posts</a></li>
+				<li class=""><a href="/moderation">Moderation</a></li>
 <? } ?>
 			</ul>
 
