--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -5,7 +5,7 @@
 	<small>
 		<a href='/posts/edit/<?=$this->view->getVar('post')->id?>'>Edit</a>
 		<a href='/posts/delete/<?=$this->view->getVar('post')->id?>'>Delete</a>
-<? if ($post->status == 3) {?>
+<? if ($post->isRequiredModeration()) {?>
 		<a href='/moderation/accept/<?=$post->id?>'>Accept</a>
 		<a href='/moderation/decline/<?=$post->id?>'>Decline</a>
 <? } ?>
@@ -15,7 +15,7 @@
 <?
 echo $this->view->getVar('escaper')->escapeHtml($this->view->getVar('post')->getCategoryNameByID()).' '.
 $this->view->getVar('escaper')->escapeHtml($this->view->getVar('post')->getUserNameByID()).' '.
-$this->view->getVar('escaper')->escapeHtml($this->view->getVar('post')->getPostStatusByID());
+$this->view->getVar('escaper')->escapeHtml($this->view->getVar('post')->status);
 ?>
 	</p>
 	<p><?=$this->view->getVar('post')->text?></p>
