--- a/app/views/partials/navbar.phtml
+++ b/app/views/partials/navbar.phtml
@@ -13,6 +13,7 @@
 			<ul class="nav navbar-nav">
 				<li class=""><a href="/home">Home</a></li>
 <? if ($this->session->get('auth')->isAuthenticated()) {?>
+				<li class=""><a href="/categories">Categories</a></li>
 				<li class=""><a href="/posts">Posts</a></li>
 				<li class=""><a href="/moderation">Moderation</a></li>
 <? } ?>
