I9: Implement 'Posts Moderation Page' Fixed comments for commit 83faba4d427ce489360ab818f3ffcfa54c4f5edb

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -10,7 +10,7 @@
 <?
 echo $this->view->getVar('escaper')->escapeHtml($post->getCategoryNameByID()).' '.
 $this->view->getVar('escaper')->escapeHtml($post->getUserNameByID()).' '.
-$this->view->getVar('escaper')->escapeHtml($post->status);
+$this->view->getVar('escaper')->escapeHtml($post->getStatus());
 ?>
 	</p>
 	<p><?=$post->text?></p>
