--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -2,6 +2,8 @@
 
 <h1 class="page-header">
 	<?=$this->view->getVar('post')->title?>
+
+<?if ($this->session->get('auth')->isAuthenticated()) { ?>
 	<small>
 		<a href='/posts/edit/<?=$this->view->getVar('post')->id?>'>Edit</a>
 		<a href='/posts/delete/<?=$this->view->getVar('post')->id?>'>Delete</a>
@@ -10,6 +12,7 @@
 		<a href='/moderation/decline/<?=$post->id?>'>Decline</a>
 <? } ?>
 	</small>
+<? } ?>
 </h1>
 	<p>
 <?
