I19: Restrict to delete category if any post attached to it Fixed comments for commit 1b87171236852b10d3a07f134c6e625dd1f1ef62

--- a/app/views/categories/index.phtml
+++ b/app/views/categories/index.phtml
@@ -22,7 +22,7 @@
 <?if (count((new \Posts)->getPostsByCategoryID($category->id))==0) { ?>
 				<a href='/categories/delete/<?=$category->id?>'>Delete</a>
 <? } else { ?>
-				Delete
+				<span class='delete_forbidden_hint' data-toggle="tooltip" title="" data-original-title="This category contains non-deleted posts">Delete</span>
 <? } ?>
 			</small>
 		</h4>
@@ -30,3 +30,7 @@
 	</div>
 <? } ?>
 </div>
+
+<script>
+$('.delete_forbidden_hint').tooltip();
+</script>
