--- a/app/views/layouts/main.phtml
+++ b/app/views/layouts/main.phtml
@@ -8,6 +8,7 @@
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <?
 echo \Phalcon\Tag::javascriptInclude("js/config.js");
+echo \Phalcon\Tag::javascriptInclude("js/main.js");
 if($this->view->getVar('bootstrap_enable')) {
 	//Bootstrap css
 	echo Phalcon\Tag::stylesheetLink('//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css', false);
