--- a/app/views/partials/comments.phtml
+++ b/app/views/partials/comments.phtml
@@ -2,7 +2,7 @@
 <?$depth++;?>
 <div id='comment_<?=$comment->id?>' class="media" data-id=<?=$comment->id?> data-parent=<?=$comment->parent_id?> data-depth="<?=$depth;?>">
 	<a class="pull-left">
-		<img class="media-object" src="http://placekitten.com/50/50" alt="Generic placeholder image">
+		<img class="media-object" src="http://placekitten.com/g/50/50" alt="Generic placeholder image">
 	</a>
 	<div class="media-body">
 		<h5 class="media-heading" style="font-weight: bold">
