--- a/app/views/useradmin/index.phtml
+++ b/app/views/useradmin/index.phtml
@@ -4,7 +4,7 @@
 
 <div class="list-group">
 <? foreach ($this->view->getVar('users') as $user) {?>
-	<a href="/profileadmin/index/<?=$this->view->getVar('escaper')->escapeHtmlAttr($user->id)?>" class="list-group-item">
+	<a href="/profileadmin/index/<?=$user->id?>" class="list-group-item">
 		<img class="pull-left" style="margin-right: 15px;" height="64" src="https://avatars0.githubusercontent.com/u/5111142?s=140" width="64">
 		<p class="list-group-item-heading">
 			<strong><?=$this->view->getVar('escaper')->escapeHtml($user->name)?></strong>
